force-app/main/default/objects/opa_companies_iskill__c/opa_companies_iskill__c.object-meta.xml
<CustomObject>
    <label>opa_companies_iskill</label>
    <nameField>
        <label>opa_companies_iskill</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>opa_companies_iskills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>