force-app/main/default/objects/opa_companies_iskill__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>opa_companies_iskills</relationshipLabel>
    <relationshipName>opa_companies_iskills</relationshipName>
    <type>Lookup</type>
</CustomField>