force-app/main/default/objects/opa_companies_iskill__c/fields/iskill__c.field-meta.xml
<CustomField>
    <fullName>iskill__c</fullName>
    <label>iskill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>