force-app/main/default/objects/opa_companies_iskill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>opa_companies_iskills</relationshipLabel>
    <relationshipName>opa_companies_iskills</relationshipName>
    <type>Lookup</type>
</CustomField>