force-app/main/default/objects/opa_companies_iskill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LegacyOpaID_Person__c</columns>
    <columns>LegacyOpaID_Company__c</columns>
    <columns>CompanyName__c</columns>
    <columns>Account_Function_c__c</columns>
    <columns>iskill__c</columns>
    <columns>iskill_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>